--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -120,13 +120,16 @@ a.sidebar-nav-item:focus {
  */
 
 .content {
+  /* TODO: try updating max-width, to make screenshots more readable on monitors
+  max-width: 60rem;
+  */
   padding-top:    4rem;
   padding-bottom: 4rem;
 }
 
 @media (min-width: 48em) {
   .content {
-    max-width: 38rem;
+    /* max-width: 60rem; */
     margin-left: 20rem;
     margin-right: 2rem;
   }
@@ -134,6 +137,7 @@ a.sidebar-nav-item:focus {
 
 @media (min-width: 64em) {
   .content {
+    /* max-width: 60rem; */
     margin-left: 22rem;
     margin-right: 4rem;
   }
