Remove and update various things

--- a/_sass/devlopr.scss
+++ b/_sass/devlopr.scss
@@ -1040,6 +1040,7 @@ footer {
     line-height: 20px !important;
 }
 
+// TODO: update images?
  .switch {
      position: relative;
      width: 80px;
