--- a/_includes/blog_newsletter.html
+++ b/_includes/blog_newsletter.html
@@ -1,4 +1,5 @@
 <!-- Mailchimp Newletters -->
+<!-- TODO: do I want this? -->
 <form action="{{site.mailchimp_form_url}}"method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 <div id="mc_embed_signup_scroll_footer">
     <label for="mce-EMAIL_footer"> Signup for Weekly Email Newsletters :D</label>
