Add a few more pages

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -38,7 +38,7 @@
     <a href="{{site.url}}{{site.baseurl}}/get-started">
       <button class="btn btn-md btn-warning"> <strong>Get Started</strong> </button>
     </a>
-    <a id="olvy-target">
+    <a href="{{site.url}}{{site.baseurl}}/new">
       <button class="btn btn-md btn-default"> <strong>What's New</strong> </button>
      </a>
   </div>
