--- a/_layouts/full-width.html
+++ b/_layouts/full-width.html
@@ -37,7 +37,7 @@ layout: compress
     }
   </script>
       <!-- what's new -->
-       <script>
+       <!-- <script>
         var OlvyConfig = {
           organisation: "{{site.olvy_organization}}",
           target: "#olvy-target",
@@ -52,6 +52,6 @@ layout: compress
           }
         };
       </script>
-      <script type="text/javascript" src="https://app.olvy.co/script.js" defer="defer"></script>
+      <script type="text/javascript" src="https://app.olvy.co/script.js" defer="defer"></script> -->
     </body>
 </html>
