Comment out some netlify stuff for now I don't think I'm using any of it at the moment (We'll see!)

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@ layout: compress
             nanobar.go( 76 );
             nanobar.go(100);
         </script>
-   <script>
+   <!-- <script>
     if (window.netlifyIdentity) {
       window.netlifyIdentity.on("init", user => {
         if (!user) {
@@ -34,6 +34,6 @@ layout: compress
         }
       });
     }
-  </script>
+  </script> -->
   </body>
 </html>
