--- a/_layouts/full-width.html
+++ b/_layouts/full-width.html
@@ -25,7 +25,7 @@ layout: compress
             nanobar.go(100);
         </script>
    <script src="{{site.url}}{{site.baseurl}}/assets/js/mode-switcher.js"></script>
-   <script>
+   <!-- <script>
     if (window.netlifyIdentity) {
       window.netlifyIdentity.on("init", user => {
         if (!user) {
@@ -35,7 +35,7 @@ layout: compress
         }
       });
     }
-  </script>
+  </script> -->
       <!-- what's new -->
        <!-- <script>
         var OlvyConfig = {
