Try changing favicon image type

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -99,7 +99,7 @@
   <link
     rel="icon"
     href="{{site.url}}{{site.baseurl}}/assets/img/favicon.ico"
-    type="image/gif"
+    type="image/x-icon"
     sizes="16x16"
   />
   <script>
