Try changing the favicon href

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -98,7 +98,7 @@
   <!-- Favicon -->
   <link
     rel="icon"
-    href="{{site.url}}{{site.baseurl}}/assets/img/favicon.ico"
+    href="/assets/img/favicon.ico"
     type="image/x-icon"
     sizes="16x16"
   />
