Change what's new link to About

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -38,8 +38,8 @@
     <a href="{{site.url}}{{site.baseurl}}/get-started">
       <button class="btn btn-md btn-warning"> <strong>Get Started</strong> </button>
     </a>
-    <a href="{{site.url}}{{site.baseurl}}/new">
-      <button class="btn btn-md btn-default"> <strong>What's New</strong> </button>
+    <a href="{{site.url}}{{site.baseurl}}/about">
+      <button class="btn btn-md btn-default"> <strong>About</strong> </button>
      </a>
   </div>
 </div>
