--- a/_includes/blog_post_article.html
+++ b/_includes/blog_post_article.html
@@ -3,11 +3,7 @@
     <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
     <h4 class="post-meta">{{ page.summary }}</h4>
     <p class="post-summary">
-      Posted <!--
-      by : {% if page.author %}
-      <span itemprop="author" itemscope itemtype="http://schema.org/Person">
-        <span itemprop="name"><a href="{{site.url}}{{site.baseurl}}/blog/authors/{{page.author}}">{{ page.author }}</a></span> </span
-      >{% endif %} --> on:
+      Posted on:
       <time datetime="{{ page.date }}" itemprop="datePublished"
         >{{ page.date | date: "%b %-d, %Y" }}</time
       >
@@ -37,20 +33,15 @@
     <br />
     {{ content }}
     <br />
-    <!-- Author box -->
-    <!-- {% assign author = site.data.authors[page.author] %}
-      {% if author %}
-      {% include author.html %}
-    {% endif %} -->
   </div>
   {%- if site.hyvor_talk_website_id -%}
   <div class="comments">
     {%- include hyvor_comments.html -%}
    </div>
     {%- endif -%}
-  <!-- Incomment incase you want to use Disqus
+    <!-- Uncomment incase you want to use Disqus
       <div id="disqus_thread"></div>
-   -->
+    -->
 
 
 </article>
