--- a/_sass/devlopr.scss
+++ b/_sass/devlopr.scss
@@ -645,6 +645,8 @@ header {
     padding-left: 5px;
     padding-top: 2px;
     margin: 5px;
+    display: flex;
+    align-items: center;
 }
 .recent-article-link{
     font-size: 20px;
