--- a/_sass/devlopr.scss
+++ b/_sass/devlopr.scss
@@ -595,6 +595,19 @@ header {
     width: 0;
 }
 
+// .lg-sub-html {
+//     padding: 40px !important;
+//     font-size: 30px !important;
+// }
+
+// .lg-sub-html h4 {
+//     font-size: 30px !important;
+// }
+
+// .lg-image {
+//     transform: scale3d(2, 2, 1) !important;
+// }
+
 @media (max-width: 1200px) {
   .legend-mark-img {
     height: 40px !important;
@@ -613,6 +626,14 @@ header {
   }
 }
 
+/* Scroll box around profile years */
+.year-scroll {
+    max-height: 300px;
+    overflow-y: auto;
+    border: 1px solid #ccc;
+    padding: 0.5em;
+    margin-bottom: 2em;
+}
 
 /* Homepage project cards*/
 
