Center typed message and update todos

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -17,10 +17,8 @@
   color: #fff;
   background-color: #382818;
   width: fit-content;
-  /* display: flex;
-  justify-content: center;
-  text-align: center;
-  align-items: center; */
+  margin: 0 auto;
+  display: block;
 }
 </style>
 
