Try fixing favicon again, lol

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -98,7 +98,7 @@
   <!-- Favicon -->
   <link
     rel="icon"
-    href="/assets/img/favicon.ico"
+    href="/favicon.ico"
     type="image/x-icon"
   />
   <script>
